BcmTVInput: Infrastructure for new EPG Update procedure
refs #SWANDROID-1361

Change-Id: Ifa88f8ddd44751d4757f4a2fc3c8ab76a22b9591